--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 </head>
 
 <body>
-  <div class="row">
-    <div class="col-12 card col-sm-7 text-center p-4 bg-warning shadow-lg" id="Tabla">
+  <div class="row pb-5">
+    <div class="col-12 card col-sm-7 text-center p-2 bg-warning shadow-lg" id="Tabla">
       <h3>Animales en investigación</h3>
       <hr class="my-0 bg-dark w-75 mx-auto" />
 
-      <div id="Animales" class="my-3 p-3 d-flex align-items-start justify-content-start flex-wrap bg-dark"></div>
+      <div id="Animales" class="my-3 p-2 d-flex align-items-start justify-content-center flex-wrap bg-dark"></div>
     </div>
     <div class="card col-12 col-sm-4 bg-warning text-dark offset-1 shadow-lg">
       <div class="card-body">
@@ -69,14 +69,19 @@
     </div>
   </div>
 
-  <button id="btnRugir">¡Haz rugir al león!</button>
+  
 
   <audio id="player" class="" src="assets/sounds/Aullido.mp3"></audio>
 
   <div class="modal fade" id="exampleModal">
     <div class="modal-dialog modal-dialog-centered w-25" role="document">
       <div class="modal-content bg-dark">
-        <div class="modal-body">...</div>
+        <div class="modal-body">
+          <div class="d-flex justify-content-center"><img id="modalImg" class="img-fluid"></div>
+          <p id="modalAge" class="text-center text-white my-2"></p>
+          <h5 class="text-center text-white my-3">Comentarios</h5>
+          <p id="modalComments" class="text-center text-white"></p>
+        </div>
       </div>
     </div>
   </div>
